@@ -3,10 +3,10 @@ package ru.yandex.practicum.filmorate.service;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import ru.yandex.practicum.filmorate.model.User;
-import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 import ru.yandex.practicum.filmorate.exception.DataNotFoundException;
+import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.user.InMemoryUserStorage;
+import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 import ru.yandex.practicum.filmorate.validator.Validator;
 
 import java.util.ArrayList;
@@ -18,29 +18,26 @@ import java.util.stream.Collectors;
 @Service
 public class UserService {
 
-    private final Validator validator;
     private final UserStorage userStorage;
-    private long userId = 0;
+    private long userId = 0L;
 
     @Autowired
-    public UserService(Validator validator, InMemoryUserStorage userStorage) {
-        this.validator = validator;
+    public UserService(InMemoryUserStorage userStorage) {
         this.userStorage = userStorage;
     }
 
-    public void validateUser(User user) {
-        validator.validationUser(user);
+    public void validationUser(User user) {
+        Validator.validationUser(user);
     }
 
     public List<User> findAll() {
-        log.debug("Получен запрос GET /users.");
         log.debug("Текущее количество пользователей: {}", userStorage.getUsers().size());
         return new ArrayList<>(userStorage.getUsers().values());
     }
 
     public User create(User user) {
         log.debug("Получен запрос POST /users.");
-        validateUser(user);
+        validationUser(user);
         userId++;
         user.setId(userId);
         return userStorage.create(user);
@@ -51,7 +48,7 @@ public class UserService {
         if (!actualUsers.containsKey(user.getId())) {
             throw new DataNotFoundException("Нет такого id");
         }
-        validateUser(user);
+        validationUser(user);
         log.debug("Получен запрос PUT /users.");
         return userStorage.update(user);
     }
@@ -59,7 +56,7 @@ public class UserService {
     public void delete(long id) {
         log.debug("Получен запрос DELETE /users/{id}.");
         User user = userStorage.getUserById(id);
-        validateUser(user);
+        validationUser(user);
         userStorage.delete(user);
     }
 
@@ -77,9 +74,7 @@ public class UserService {
         log.debug("Получен запрос DELETE /users/{id}/friends/{friendId}.");
         User firstFriend = userStorage.getUserById(id);
         User secondFriend = userStorage.getUserById(friendId);
-        if (firstFriend.getFriendsId().contains(friendId)) {
-            firstFriend.getFriendsId().remove(friendId);
-        }
+        firstFriend.getFriendsId().remove(friendId);
         if (secondFriend.getFriendsId().contains(friendId)) {
             secondFriend.getFriendsId().remove(id);
             log.debug("Пользователи {} и {} теперь не друзья", firstFriend.getName(),
@@ -99,7 +94,7 @@ public class UserService {
             return new ArrayList<>();
         }
         List<Long> commonIdList = firstFriendsList.stream().filter(secondFriendsList::contains)
-                .collect(Collectors.toList());
+                .toList();
         return commonIdList.stream().map(actualUsers::get).collect(Collectors.toList());
     }
 
